// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`accessController inviteUser works correctly 1`] = `
Array [
  "mockExperimentId",
  "user@example.com",
  "admin",
  Object {
    "email": "owner@example.com",
  },
]
`;

exports[`accessController postRegistration works correctly 1`] = `
Array [
  Object {
    "body": "{\\"userId\\":\\"mockUserId\\",\\"userEmail\\":\\"user@example.com\\"}",
  },
]
`;

exports[`accessController revokeAccess works correctly 1`] = `
Array [
  "mockExperimentId",
  "user@example.com",
]
`;
